# Nepal-Software-Companies

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: .env.example  Dockerfile  pyproject.toml
app/company/: admin.py  urls.py
app/root/: admin.py  middleware.py  urls.py
app/templates/: base.html
app/templates/company/: index.html
app/templates/includes/: footer.html  header.html
backend/: .dockerignore  .env.example  .yamllint  Dockerfile  Makefile  requirements.txt
backend/company/: filters.py  models.py  serializers.py  urls.py  views.py
backend/fixture/: companies.json
backend/root/: env_config.py  jazzmin.py  settings.py  urls.py
backend/templates/: 404.html
company/: apis.py  permissions.py  serializers.py  urls.py  views.py
company/migrations/: 0001_initial.py
company/templatetags/: company_tags.py
fixture/: companies.json
frontend/: .env.local.example  .prettierignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
root/: settings.py  swagger.py  urls.py  views.py
static/css/: companylist.css  email_management.css  footer.css  homepage.css  login.css  logout.css  password_change.css  password_reset.css  signup.css  style.css
templates/: base.html  homepage.html
templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/company/: company_list.html
templates/components/: footer.html  navbar.html  under_development.html
(+19 files in other folders)
